added analytics link

--- a/src/app/campaign/create/create.component.html
+++ b/src/app/campaign/create/create.component.html
@@ -69,14 +69,14 @@
 
                   </div>
                   <div class="col-4">
-                    <mat-form-field>
+                    <!-- <mat-form-field>
                       <mat-select placeholder="Number of Weeks" formControlName="noOfWeeks" (selectionChange)="selectedNoOfWeeks($event.value)">
                         <mat-option *ngFor="let row of weeks" [value]="row.value ">
                           {{row.viewValue}}
                         </mat-option>
 
                       </mat-select>
-                    </mat-form-field>
+                    </mat-form-field> -->
 
                   </div>
 
