--- a/src/app/analytics/charts-container/charts-container.component.scss
+++ b/src/app/analytics/charts-container/charts-container.component.scss
@@ -1,3 +1,12 @@
 .activity {
   padding-top: 20px;
 }
+
+.filters {
+  padding-top: 50px;
+  padding-left: 50px;
+}
+
+.time-visual {
+  padding-top: 20px;
+}
