--- a/src/app/analytics/charts-container/coupon-chart/coupon-chart.component.html
+++ b/src/app/analytics/charts-container/coupon-chart/coupon-chart.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="container"><br><br>
+  <p>total generated coupons are <b>{{totalCoupons}}</b><br>
+    total availed coupons are <b>{{usedCoupons}}</b></p>
   <div class="text-center">
     <fusioncharts width="375" height="225" type="pie2d" [dataSource]="dataSource">
     </fusioncharts>
